# ros2_topic_learning

./: README.md
chapt3_topic_ws/install/: local_setup.sh  setup.sh
chapt3_topic_ws/install/example_topic_rclcpp/lib/example_topic_rclcpp/: topic_publisher_01_node  topic_subscriber_01_node
chapt3_topic_ws/install/example_topic_rclcpp/share/ament_index/resource_index/parent_prefix_path/: example_topic_rclcpp
chapt3_topic_ws/install/example_topic_rclcpp/share/example_topic_rclcpp/: package.bash  package.sh  package.xml  package.zsh
chapt3_topic_ws/log/: latest_build
chapt3_topic_ws/src/example_topic_rclcpp/: CMakeLists.txt
chapt3_topic_ws/src/example_topic_rclcpp/launch/: example_action.launch.py
chapt3_topic_ws/src/example_topic_rclcpp/src/: topic_publisher_01_node.cpp  topic_subscriber_01_node.cpp
